# starflight-reverse

./: .gitmodules  ApplyPostEffects.psh  CMakeLists.txt  DiligentUtils.cmake  Makefile  README.md  atlas.raw  atlas.raw.zst  blender_dense_grass_generator.py  font-ttf-2.py  font-ttf.py  font.py  font2.py  lava_rock_generator_simple.py  makeimg.py  makeimg2.py  makeimg3.py  uvmapper-blender.py  uvmapper.py
assets/: 61x61plane.glb  DaySkyHDRI058B_1K-HDR.hdr  NightSkyHDRI016B_1K-HDR.hdr  mechan9.glb  mechan9.hdr  starfield.ktx  station29.glb  station34.blend
shaders/: MeshPS.psh  MeshVS.vsh  RenderPBR_Structures.fxh  SF_RenderPBR_Structures.fxh
src/cpu/: 8086emu.cpp  bios.h  biosbin.py  cpu.c  cpu.cpp  cpu.h
src/disasOV/: dictionary.c  dictionary.h  disasOV.c  extract.c  global.h  parser.c  parser.h  utils.c  utils.h
src/disasmX86/: debugger.c  disasm.h
src/emul/: CloudVolumeRenderer.cpp  CloudVolumeRenderer.hpp  CommsSystem.cpp  CommsSystem.h  DiligentEpipolarLightScattering.hpp  DiligentShadowMapManager.cpp  DiligentShadowMapManager.hpp  DynamicMesh.cpp  DynamicMesh.hpp  PerfMetrics.cpp  PerfMetrics.h  SFModel.h  call.c  call.cpp  call.h  callstack.c  common.pch  emul.cpp  findword.cpp  findword.h  fract.cpp  fract.h  graphics.c  graphics.cpp  graphics.h  importfix.cpp  instance.h  isr.asm  isr.c  isr.cpp  planet_demo.cpp  planet_demo.h  planet_orbit.glsl  platform.cpp  platform.h  rotoscope.comp  sdl2surface_rawfb.h  sdl_helper.cpp  spline.hpp  starsystem.h  (+10 more)
src/experiments/: station.glsl
src/extract/: data.h  emulatecomm.c  extractplanets.c  extractplanetsdata.c  extractvessels.c  instance.c
src/pbr/: SF_GLTFBuilder.cpp  SF_GLTFBuilder.hpp  SF_GLTFLoader.cpp  SF_GLTFLoader.hpp  SF_GLTFResourceManager.cpp  SF_GLTFResourceManager.hpp  SF_GLTF_PBR_Renderer.cpp  SF_GLTF_PBR_Renderer.hpp  SF_PBR_Renderer.cpp  SF_PBR_Renderer.hpp  SF_RenderPBR.vsh.h  tiny_gltf.h
src/pbr/shaders/: HSOutputStruct.generated  SF_PBR_Shading.fxh  SF_PBR_Structures.fxh  SF_RenderPBR.psh  SF_RenderPBR.vsh  SF_RenderPBR_Structures.fxh  SF_RenderPBR_Terrain.dsh  SF_RenderPBR_Terrain.hsh
src/pbr/shaders_inc/: SF_RenderPBR.vsh.h  SF_RenderPBR_Structures.fxh.h
src/shaders/: better_planet.h  compositor.comp  distance.h  encounter.comp  engines.h  explosion.h  galaxy.h  hyperspace_stars.h  navigation.comp  nebula.h  noise.h  orbit.comp  orrery.comp  planet.h  rotoscope.comp  starburst.h  starmap.comp  station_stars.h  sun.h  tables.h  text.comp  title.comp  uniform.h
src/tts/: speech.cpp  speech.h
starflt1-out/: data.h  ega.asm.c  lfillpoly.asm  lfillpoly.c  lfillpoly.cpp  starflt.c
starflt1-out/data/: dictionary.h  directory.h  starsystem.h
starflt1-out/overlays/: DAMAGE-OV.c  FRACT-OV.c  MAP-OV.c  MUSIC.c  ORBIT-OV.c
